deals_v3_backend