@@ -12,9 +12,9 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 
+import java.lang.reflect.Field;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -22,8 +22,11 @@ import static org.mockito.Mockito.*;
 
 class PaymentControllerTest {
 
+    @InjectMocks
+    private PaymentController paymentController;
+
     @Mock
-    private BraintreeGateway gateway;
+    private BraintreeGateway braintreeGateway;
 
     @Mock
     private TransactionGateway transactionGateway;
@@ -34,78 +37,58 @@ class PaymentControllerTest {
     @Mock
     private PaymentService paymentService;
 
-    @InjectMocks
-    private PaymentController paymentController;
-
     @BeforeEach
-    void setUp() {
+    void setUp() throws Exception {
         MockitoAnnotations.openMocks(this);
-        when(gateway.transaction()).thenReturn(transactionGateway);
+        paymentController = new PaymentController(braintreeGateway, paymentTransactionRepository);
+        Field field = PaymentController.class.getDeclaredField("paymentService");
+        field.setAccessible(true);
+        field.set(paymentController, paymentService);
+
+        when(braintreeGateway.transaction()).thenReturn(transactionGateway);
     }
 
+
+
     @Test
-    void testCheckoutSuccess() {
-        PaymentRequestDto request = new PaymentRequestDto();
-        request.setAmount("10.00");
-        request.setPaymentMethodNonce("fake-valid-nonce");
-        request.setUserEmail("user@example.com");
-        request.setDealId(123L);
+    void testCheckout_SuccessfulPayment() {
+        PaymentRequestDto requestDto = new PaymentRequestDto("fake-nonce", "100.00", "user@example.com", 1L);
 
         Transaction transaction = mock(Transaction.class);
-        when(transaction.getId()).thenReturn("txn-id");
-        when(transaction.getStatus()).thenReturn(Transaction.Status.SETTLED);
-        when(transaction.getAmount()).thenReturn(new BigDecimal("10.00"));
-        when(transaction.getPaymentInstrumentType()).thenReturn("credit_card");
+        when(transaction.getId()).thenReturn("txn123");
+        when(transaction.getStatus()).thenReturn(Transaction.Status.SUBMITTED_FOR_SETTLEMENT);
+        when(transaction.getAmount()).thenReturn(new BigDecimal("100.00"));
+        when(transaction.getPaymentInstrumentType()).thenReturn("fake-card");
 
         Result<Transaction> result = mock(Result.class);
         when(result.isSuccess()).thenReturn(true);
         when(result.getTarget()).thenReturn(transaction);
+
         when(transactionGateway.sale(any(TransactionRequest.class))).thenReturn(result);
 
-        ResponseEntity<String> response = paymentController.checkout(request);
+        when(paymentService.processPayment(any(PaymentTransaction.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
 
-        assertEquals(200, response.getStatusCode().value());
+        ResponseEntity<String> response = paymentController.checkout(requestDto);
+
+        assertEquals(200, response.getStatusCodeValue());
         assertTrue(response.getBody().contains("Transaction successful"));
-        verify(paymentService).processPayment(any(PaymentTransaction.class));
     }
 
     @Test
-    void testCheckoutInvalidAmount() {
-        PaymentRequestDto request = new PaymentRequestDto();
-        request.setAmount("0");
-        request.setPaymentMethodNonce("some-nonce");
-
-        ResponseEntity<String> response = paymentController.checkout(request);
-        assertEquals(400, response.getStatusCode().value());
-        assertEquals("Invalid amount.", response.getBody());
+    void testCheckout_InvalidAmount() {
+        PaymentRequestDto requestDto = new PaymentRequestDto("fake-nonce", "0", "user@example.com", 1L);
+        ResponseEntity<String> response = paymentController.checkout(requestDto);
+        assertEquals(400, response.getStatusCodeValue());
+        assertTrue(response.getBody().contains("Invalid amount"));
     }
 
     @Test
-    void testCheckoutMissingNonce() {
-        PaymentRequestDto request = new PaymentRequestDto();
-        request.setAmount("10.00");
-        request.setPaymentMethodNonce("");
-
-        ResponseEntity<String> response = paymentController.checkout(request);
-        assertEquals(400, response.getStatusCode().value());
-        assertEquals("Missing payment method nonce.", response.getBody());
-    }
-
-    @Test
-    void testCheckoutBraintreeFailure() {
-        PaymentRequestDto request = new PaymentRequestDto();
-        request.setAmount("10.00");
-        request.setPaymentMethodNonce("fake-nonce");
-
-        Result<Transaction> result = mock(Result.class);
-        when(result.isSuccess()).thenReturn(false);
-        when(result.getMessage()).thenReturn("Braintree error");
-        when(transactionGateway.sale(any(TransactionRequest.class))).thenReturn(result);
-
-        ResponseEntity<String> response = paymentController.checkout(request);
-
-        assertEquals(500, response.getStatusCode().value());
-        assertEquals("Error: Braintree error", response.getBody());
+    void testCheckout_MissingNonce() {
+        PaymentRequestDto requestDto = new PaymentRequestDto("", "100.00", "user@example.com", 1L);
+        ResponseEntity<String> response = paymentController.checkout(requestDto);
+        assertEquals(400, response.getStatusCodeValue());
+        assertTrue(response.getBody().contains("Missing payment method nonce"));
     }
 
     @Test
@@ -114,26 +97,46 @@ class PaymentControllerTest {
         when(authentication.getName()).thenReturn("user@example.com");
         SecurityContextHolder.getContext().setAuthentication(authentication);
 
-        PaymentTransaction tx = new PaymentTransaction("txn-id", "SETTLED",     ``"10.00", "credit_card",
-                LocalDateTime.now(), "user@example.com", 123L);
-        when(paymentTransactionRepository.findByUserEmail("user@example.com")).thenReturn(List.of(tx));
+        List<PaymentTransaction> mockTransactions = List.of(
+                PaymentTransaction.builder()
+                        .transactionId("txn1")
+                        .userEmail("user@example.com")
+                        .dealId(1L)
+                        .status("SUCCESS")
+                        .amount("100.00")
+                        .paymentMethod("card")
+                        .createdAt(LocalDateTime.now())
+                        .build()
+        );
+
+        when(paymentTransactionRepository.findByUserEmail("user@example.com")).thenReturn(mockTransactions);
 
         ResponseEntity<List<PaymentTransaction>> response = paymentController.getUserTransactions();
 
-        assertEquals(200, response.getStatusCode().value());
+        assertEquals(200, response.getStatusCodeValue());
         assertEquals(1, response.getBody().size());
-        assertEquals("txn-id", response.getBody().get(0).getTransactionId());
+        assertEquals("txn1", response.getBody().get(0).getTransactionId());
     }
 
     @Test
     void testGetAllTransactions() {
-        PaymentTransaction tx = new PaymentTransaction("txn-id", "SETTLED", "10.00", "credit_card",
-                LocalDateTime.now(), "user@example.com", 123L);
-        when(paymentTransactionRepository.findAll()).thenReturn(Collections.singletonList(tx));
+        List<PaymentTransaction> allTransactions = List.of(
+                PaymentTransaction.builder()
+                        .transactionId("txn2")
+                        .userEmail("admin@example.com")
+                        .dealId(2L)
+                        .status("SUCCESS")
+                        .amount("200.00")
+                        .paymentMethod("paypal")
+                        .createdAt(LocalDateTime.now())
+                        .build()
+        );
+
+        when(paymentTransactionRepository.findAll()).thenReturn(allTransactions);
 
         ResponseEntity<List<PaymentTransaction>> response = paymentController.getAllTransactions();
 
-        assertEquals(200, response.getStatusCode().value());
-        assertEquals(1, response.getBody().size());
+        assertEquals(200, response.getStatusCodeValue());
+        assertEquals("txn2", response.getBody().get(0).getTransactionId());
     }
 }
